--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!-- index.html -->
 <html>
 <head>
-    <link rel="icon" href="%PUBLIC_URL%/favicon.icon" />
+    <link rel="icon" href="/favicon.icon" />
 <title>Demo Generate QR</title>
 <style>
 *{padding: 0;margin: 0;}
