--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <link rel="icon" href="/favicon.ico" />
-<title>Demo Generate QR</title>
+<title>Demo QRcode</title>
 <style>
 *{padding: 0;margin: 0;}
 h1{text-align: center; padding: 30px;}
