--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ button:active{background:#813}
     <div class="form">
         <div class="form-group">
             <label for="text">Enter Your Text</label>
-            <input id="sos-text" type="text" name="text" value="Some Text">
+            <input id="sos-text" type="text" name="text" value="sorabh86.github.io">
         </div>
         <button id="btn-generate">Generate</button>
     </div>
