--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@ button:active{background:#813}
     <div class="sos-qr">
         <canvas id="canvas"></canvas>
     </div>
-    <script src="dist/main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
