--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
 <style>
 *{padding: 0;margin: 0;}
 h1{text-align: center; padding: 30px;}
-.sos-qr{margin: 0 auto;text-align: center;transition: 500ms all ease-in-out;}
-.sos-qr.active{zoom: 2;}
+.sos-qr{margin: 0 auto;text-align: center;position: relative;}
+.sos-qr canvas {opacity:0;}
+.sos-qr canvas.active{opacity:1;transform: scale(2) translateY(30%);transition: 500ms all ease-in-out;z-index:1;position: relative;}
+.sos-qr .overlay {position:absolute; content:'';left:0;top:0;width: 100%;height: 100%;background: #fff;}
 .form {margin:0 auto; width:500px; padding: 30px; border:1px solid #ccc;}
 input{width:100%;padding: 10px 20px;border:1px solid #ccc;}
 .form-group {margin-bottom: 16px;}
@@ -25,7 +27,8 @@ button:active{background:#813}
         <button id="btn-generate">Generate</button>
     </div>
     <div class="sos-qr">
-        <canvas id="canvas"></canvas>
+        <canvas id="canvas" width="200" height="200"></canvas>
+        <div class="overlay"></div>
     </div>
     <script src="main.js"></script>
 </body>
