--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>Demo Generate QR</title>
 <style>
+body{font-family: 'Courier New', Courier, monospace;}
 *{padding: 0;margin: 0;}
 h1{text-align: center; padding: 30px;}
 .sos-qr{margin: 0 auto;text-align: center;position: relative;}
