--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!-- index.html -->
 <html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Demo Generate QR</title>
 <style>
 body{font-family: 'Courier New', Courier, monospace;}
