--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ h1{text-align: center; padding: 30px;}
 .sos-qr canvas {opacity:0;}
 .sos-qr canvas.active{opacity:1;transform: scale(2) translateY(30%);transition: 500ms all ease-in-out;z-index:1;position: relative;}
 .sos-qr .overlay {position:absolute; content:'';left:0;top:0;width: 100%;height: 100%;background: #fff;}
-.form {margin:0 auto; width:500px; padding: 30px; border:1px solid #ccc;}
+.form {margin:0 auto; max-width:500px; padding: 30px; border:1px solid #ccc;}
 input{width:100%;padding: 10px 20px;border:1px solid #ccc;}
 .form-group {margin-bottom: 16px;}
 button{cursor: pointer;padding: 10px 30px;background:#f60; border:1px solid #f50;border-radius: 8px;font-weight:bold;color:#eee;transition: 500ms all;}
